update play section

--- a/index.html
+++ b/index.html
@@ -101,6 +101,20 @@
 
             </div>
         </section>
+        <!-- play -->
+        <section class="play-section">
+            <div class="play-text">
+                <h3><span>Play Instantly,</span><br>
+                    No Downloads
+                    No Installs.</h3>
+                <p>Play games online for free without downloading. Just click the Play button and play instantly in your
+                    browser.</p>
+            </div>
+            <div class="play-img">
+                <img src="./images/Rectangle 55.png" alt="imagPlay">
+                <img class="playImagSmall" src="./images/Rectangle 66.png" alt="imagPlaySmall">
+            </div>
+        </section>
     </main>
 
 </body>
