Career section added

--- a/index.html
+++ b/index.html
@@ -115,6 +115,39 @@
                 <img class="playImagSmall" src="./images/Rectangle 66.png" alt="imagPlaySmall">
             </div>
         </section>
+        <!-- Careers -->
+        <section class="career-section">
+
+            <div class="career-contener">
+                <h3>Careers</h3>
+                <p>Gamer is driven to create the best and most fun games for our millions of players all around the
+                    world, and we,re always on the lookout for more top talent to join our growing team. If you,d like
+                    to help us make great games and be a part of Gamers bright future, we,d love to hear from you.</p>
+                <div class="career-items">
+                    <p>
+                        Multimedia Artist +<br>
+                        Data Engineer +<br>
+                        Adroid Engineer +<br>
+                        Server Developer +<br>
+                        Group Financial Accountant +<br>
+                        Senior User Acuisition Specialist +
+                    </p>
+                    <p>
+                        Lisbon, Portugal <br>
+                        Lisbon, Portugal <br>
+                        Zoetermeer, Netherlands <br>
+                        Lisbon, Portugal <br>
+                        London, United Kingdom <br>
+                        Lisbon, Portugal
+                    </p>
+                </div>
+                <button class="btn">See all positions</button>
+            </div>
+
+            <div class="career-img">
+                <img src="./images/Group 65.png" alt="careersIMG">
+            </div>
+        </section>
     </main>
 
 </body>
