Added footer and contact section

--- a/index.html
+++ b/index.html
@@ -148,7 +148,83 @@
                 <img src="./images/Group 65.png" alt="careersIMG">
             </div>
         </section>
+        <!-- Button sections -->
+        <section class="buttons-sections">
+            <div class="buttons-section">
+                <img src="./images/Rectangle 11.png" alt="btn1">
+                <p>Action Games</p>
+            </div>
+            <div class="buttons-section">
+                <img src="./images/Rectangle 12.png" alt="btn1">
+                <p>Action Games</p>
+            </div>
+            <div class="buttons-section">
+                <img src="./images/Rectangle 13.png" alt="btn1">
+                <p>Action Games</p>
+            </div>
+            <div class="buttons-section">
+                <img src="./images/Rectangle 14.png" alt="btn1">
+                <p>Action Games</p>
+            </div>
+            <div class="buttons-section">
+                <img src="./images/Rectangle 15.png" alt="btn1">
+                <p>Action Games</p>
+            </div>
+            <div class="buttons-section">
+                <img src="./images/Rectangle 16.png" alt="btn1">
+                <p>Action Games</p>
+            </div>
+            <div class="buttons-section">
+                <img src="./images/Rectangle 17.png" alt="btn1">
+                <p>Action Games</p>
+            </div>
+            <div class="buttons-section">
+                <img src="./images/Rectangle 18.png" alt="btn1">
+                <p>Action Games</p>
+            </div>
+            <div class="buttons-section">
+                <img src="./images/Rectangle 19.png" alt="btn1">
+                <p>Action Games</p>
+            </div>
+            <div class="buttons-section">
+                <img src="./images/Rectangle 11.png" alt="btn1">
+                <p>Action Games</p>
+            </div>
+        </section>
+        <!-- Contact Us -->
+        <section class="contactUs">
+            <h2>Contact With Us</h2>
+            <form>
+                <input type="name" placeholder="Name">
+                <input type="email" placeholder="Email">
+                <textarea name="message" placeholder="Message" cols="30" rows="10"></textarea>
+            </form>
+        </section>
     </main>
+    <footer>
+        <div class="footer">
+            <ul class="nav-logo">
+                <li><img src="./images/Frame.png" alt="icon"></li>
+                <li><span>G</span>amer</li>
+            </ul>
+            <ul class="footer-items">
+                <li>Our Story</li>
+                <li>Games</li>
+                <li>Web Games</li>
+                <li>Careers</li>
+                <li>Support</li>
+                <li>My Account</li>
+            </ul>
+            <ul class="footer-items">
+                <li><i class="fa-brands fa-facebook"></i></li>
+                <li><i class="fa-brands fa-twitter"></i></li>
+                <li><i class="fa-brands fa-youtube"></i></li>
+                <li><i class="fa-brands fa-linkedin"></i></li>
+                <li><i class="fa-solid fa-envelope"></i></li>
+                <li><i class="fa-brands fa-apple"></i></li>
+            </ul>
+        </div>
+    </footer>
 
 </body>
 
